--- a/last.html
+++ b/last.html
@@ -12,7 +12,7 @@
 			<div class="bark"></div>
 		</div>
 		<div class="details">
-			<h4 class="color1">BUSY PERSON</h2>
+			<h4 class="color1">SHREYA</h2>
 			<h4 class="color2 margin">(HAPPY BIRTHDAY)</h3>
 			<p></p>
 
@@ -25,5 +25,4 @@
 		</div>
 	</div>
 </body>
-
 </html>
