--- a/index.html
+++ b/index.html
@@ -8,14 +8,8 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <!-- Background music -->
-    <audio autoplay loop muted oncanplay="console.log('Audio is playable!')">
-        <source src="birthday_song.mp3" type="audio/mpeg">
-        Your browser does not support the audio element.
-    </audio>
-
-    <canvas id="c"></canvas>
-    <a href="./hbd.html"><button class="btn">Click Me!!</button></a>
-    
-    <script src="app.js"></script>
+<canvas id=c></canvas>
+<a href="/Happy Birthday/hbd-main/index.html"><button class="btn">Click Me!!</button></a>
+<script src="app.js"></script>
 </body>
+</html>
